--- a/guidebook/index.html
+++ b/guidebook/index.html
@@ -4,218 +4,81 @@ title: Coaching Guidebook
 ---
 
 <div class="row">
-    <div id="side-nav" class="col-md-3">
-        <nav class="nav nav-tabs nav-stacked affix" role="navigation">
-            <li><a href="#overall-strategy">Overall Strategy</a></li>
-            <li><a href="#attack">Attack</a></li>
-            <li class="nav nav-list" data-toggle="collapse" data-target="#sub-def">
-                <a href="#defense">Defense</a>
-                <ul class="nav nav-list collapse" id="sub-def">
-                    <li><a href="#defense-general">General</a></li>
-                    <li><a href="#defense-stopping-playmakers">Stopping Playmakers</a></li>
-                </ul>
-            </li>
-            <li><a href="#transition-from-attack-to-defense">Transition from Attack to Defense</a></li>
-            <li><a href="#transition-from-defense-to-attack">Transition from Defense to Attack</a></li>
-            <li><a href="#pressing">Pressing</a></li>
-            <li class="nav nav-list" data-toggle="collapse" data-target="#sub-youth-dev">
-                <a href="#youth-development">Youth Development</a>
-                <ul class="nav nav-list collapse" id="sub-youth-dev">
-                    <li><a href="#youth-development-specific-drills">Specific Drills</a></li>
-                </ul>
-            </li>
-            <li class="nav nav-list" data-toggle="collapse" data-target="#sub-player-qual">
-                <a href="#player-qualities">Player Qualities</a>
-                <ul class="nav nav-list collapse" id="sub-player-qual">
-                    <li><a href="#player-qualities-fullbacks">Fullbacks</a></li>
-                    <li><a href="#player-qualities-wingbacks">Wingbacks</a></li>
-                    <li><a href="#player-qualities-midfielders">Midfielders</a></li>
-                    <li><a href="#player-qualities-wingers">Wingers</a></li>
-                    <li><a href="#player-qualities-goalkeeper">Goalkeeper</a></li>
-                    <li><a href="#player-qualities-center-backs">Center Backs</a></li>
-                    <li><a href="#player-qualities-target-man">Target Man</a></li>
-                    <li><a href="#player-qualities-playmaker">Playmaker</a></li>
-                </ul>
-            </li>
-            <li><a href="#game-preparation">Game Preparation</a></li>
-            <li class="nav nav-list" data-toggle="collapse" data-target="#sub-training">
-                <a href="#training">Training</a>
-                <ul class="nav nav-list collapse" id="sub-training">
-                    <li><a href="#training-general">General</a></li>
-                </ul>
-            </li>
-            <li class="nav nav-list" data-toggle="collapse" data-target="#sub-formations">
-                <a href="#formations">Formations</a>
-                <ul class="nav nav-list collapse" id="sub-formations">
-                    <li><a href="#formations-general">General</a></li>
-                    <li><a href="#formations-5-3-2">5-3-2</a></li>
-                    <li><a href="#formations-3-5-2">3-5-2</a></li>
-                    <li><a href="#formations-4-3-3">4-3-3</a></li>
-                    <li><a href="#formations-4-5-1">4-5-1</a></li>
-                    <li><a href="#formations-4-1-3-2">4-1-3-2</a></li>
-                    <li><a href="#formations-4-4-2">4-4-2</a></li>
-                </ul>
-            </li>
-            <li class="nav nav-list" data-toggle="collapse" data-target="#sub-club-manage">
-                <a href="#club-management">Club Management</a>
-                <ul class="nav nav-list collapse" id="sub-club-manage">
-                    <li><a href="#club-management-analysts">Analysts</a></li>
-                    <li><a href="#club-management-interns">Interns</a></li>
-                </ul>
-            </li>
-            <li class="nav nav-list" data-toggle="collapse" data-target="#sub-skills">
-                <a href="#skills">Skills</a>
-                <ul class="nav nav-list collapse" id="sub-skills">
-                    <li><a href="#skills-touches">Touches</a></li>
-                    <li><a href="#skills-dribbling">Dribbling</a></li>
-                </ul>
-            </li>
-        </nav>
+    <div class="col-md-3">
+        <div id="toc"></div>
     </div>
     <div class="col-md-9">
-        <section id="overall-strategy" style="padding-top: 60px; margin-top: -60px">
-            <h2>Overall Strategy</h2>
-            <p>Test</p>
-        </section>
-        <section id="attack" style="padding-top: 60px; margin-top: -60px">
-            <h2>Attack</h2>
-            <p>Test</p>
-        </section>
-        <section id="defense" style="padding-top: 60px; margin-top: -60px">
-            <h2>Defense</h2>
-            <p>Test</p>
-        </section>
-        <section id="defense-general" style="padding-top: 60px; margin-top: -60px">
-            <h3>General</h3>
-            <p>Test</p>
-        </section>
-        <section id="defense-stopping-playmakers" style="padding-top: 60px; margin-top: -60px">
-            <h3>Stopping Playmakers</h3>
-            <p>Test</p>
-        </section>
-        <section id="transition-from-attack-to-defense" style="padding-top: 60px; margin-top: -60px">
-            <h2>Transition from Attack to Defense</h2>
-            <p>Test</p>
-        </section>
-        <section id="transition-from-defense-to-attack" style="padding-top: 60px; margin-top: -60px">
-            <h2>Transition from Defense to Attack</h2>
-            <p>Test</p>
-        </section>
-        <section id="pressing" style="padding-top: 60px; margin-top: -60px">
-            <h2>Pressing</h2>
-            <p>Test</p>
-        </section>
-        <section id="youth-development" style="padding-top: 60px; margin-top: -60px">
-            <h2>Youth Development</h2>
-            <p>Test</p>
-        </section>
-        <section id="youth-development-specific-drills" style="padding-top: 60px; margin-top: -60px">
-            <h3>Specific Drills</h3>
-            <p>Test</p>
-        </section>
-        <section id="player-qualities" style="padding-top: 60px; margin-top: -60px">
-            <h2>Player Qualities</h2>
-            <p>Test</p>
-        </section>
-        <section id="player-qualities-fullbacks" style="padding-top: 60px; margin-top: -60px">
-            <h3>Fullbacks</h3>
-            <p>Test</p>
-        </section>
-        <section id="player-qualities-wingbacks" style="padding-top: 60px; margin-top: -60px">
-            <h3>Wingbacks</h3>
-            <p>Test</p>
-        </section>
-        <section id="player-qualities-midfielders" style="padding-top: 60px; margin-top: -60px">
-            <h3>Midfielders</h3>
-            <p>Test</p>
-        </section>
-        <section id="player-qualities-wingers" style="padding-top: 60px; margin-top: -60px">
-            <h3>Wingers</h3>
-            <p>Test</p>
-        </section>
-        <section id="player-qualities-goalkeeper" style="padding-top: 60px; margin-top: -60px">
-            <h3>Goalkeeper</h3>
-            <p>Test</p>
-        </section>
-        <section id="player-qualities-center-backs" style="padding-top: 60px; margin-top: -60px">
-            <h3>Center Backs</h3>
-            <p>Test</p>
-        </section>
-        <section id="player-qualities-target-man" style="padding-top: 60px; margin-top: -60px">
-            <h3>Target Man</h3>
-            <p>Test</p>
-        </section>
-        <section id="player-qualities-playmaker" style="padding-top: 60px; margin-top: -60px">
-            <h3>Playmaker</h3>
-            <p>Test</p>
-        </section>
-        <section id="game-preparation" style="padding-top: 60px; margin-top: -60px">
-            <h2>Game Preparation</h2>
-            <p>Test</p>
-        </section>
-        <section id="training" style="padding-top: 60px; margin-top: -60px">
-            <h2>Training</h2>
-            <p>Test</p>
-        </section>
-        <section id="training-general" style="padding-top: 60px; margin-top: -60px">
-            <h3>General</h3>
-            <p>Test</p>
-        </section>
-        <section id="formations" style="padding-top: 60px; margin-top: -60px">
-            <h2>Formations</h2>
-            <p>Test</p>
-        </section>
-        <section id="formations-general" style="padding-top: 60px; margin-top: -60px">
-            <h3>General</h3>
-            <p>Test</p>
-        </section>
-        <section id="formations-5-3-2" style="padding-top: 60px; margin-top: -60px">
-            <h3>5-3-2</h3>
-            <p>Test</p>
-        </section>
-        <section id="formations-3-5-2" style="padding-top: 60px; margin-top: -60px">
-            <h3>3-5-2</h3>
-            <p>Test</p>
-        </section>
-        <section id="formations-4-3-3" style="padding-top: 60px; margin-top: -60px">
-            <h3>4-3-3</h3>
-            <p>Test</p>
-        </section>
-        <section id="formations-4-5-1" style="padding-top: 60px; margin-top: -60px">
-            <h3>4-5-1</h3>
-            <p>Test</p>
-        </section>
-        <section id="formations-4-1-3-2" style="padding-top: 60px; margin-top: -60px">
-            <h3>4-1-3-2</h3>
-            <p>Test</p>
-        </section>
-        <section id="formations-4-4-2" style="padding-top: 60px; margin-top: -60px">
-            <h3>4-4-2</h3>
-            <p>Test</p>
-        </section>
-        <section id="club-management" style="padding-top: 60px; margin-top: -60px">
-            <h2>Club Management</h2>
-            <p>Test</p>
-        </section>
-        <section id="club-management-analysts" style="padding-top: 60px; margin-top: -60px">
-            <h3>Analysts</h3>
-            <p>Test</p>
-        </section>
-        <section id="club-management-interns" style="padding-top: 60px; margin-top: -60px">
-            <h3>Interns</h3>
-            <p>Test</p>
-        </section>
-        <section id="skills" style="padding-top: 60px; margin-top: -60px">
-            <h2>Skills</h2>
-            <p>Test</p>
-        </section>
-        <section id="skills-touches" style="padding-top: 60px; margin-top: -60px">
-            <h3>Touches</h3>
-            <p>Test</p>
-        </section>
-        <section id="skills-dribbling" style="padding-top: 60px; margin-top: -60px">
-            <h3>Dribbling</h3>
-            <p>Test</p>
-        </section>
+        <h2>Overall Strategy</h2>
+        <p>Test</p>
+        <h2>Attack</h2>
+        <p>Test</p>
+        <h2>Defense</h2>
+        <p>Test</p>
+        <h3>General</h3>
+        <p>Test</p>
+        <h3>Stopping Playmakers</h3>
+        <p>Test</p>
+        <h2>Transition from Attack to Defense</h2>
+        <p>Test</p>
+        <h2>Transition from Defense to Attack</h2>
+        <p>Test</p>
+        <h2>Pressing</h2>
+        <p>Test</p>
+        <h2>Youth Development</h2>
+        <p>Test</p>
+        <h3>Specific Drills</h3>
+        <p>Test</p>
+        <h2>Player Qualities</h2>
+        <p>Test</p>
+        <h3>Fullbacks</h3>
+        <p>Test</p>
+        <h3>Wingbacks</h3>
+        <p>Test</p>
+        <h3>Midfielders</h3>
+        <p>Test</p>
+        <h3>Wingers</h3>
+        <p>Test</p>
+        <h3>Goalkeeper</h3>
+        <p>Test</p>
+        <h3>Center Backs</h3>
+        <p>Test</p>
+        <h3>Target Man</h3>
+        <p>Test</p>
+        <h3>Playmaker</h3>
+        <p>Test</p>
+        <h2>Game Preparation</h2>
+        <p>Test</p>
+        <h2>Training</h2>
+        <p>Test</p>
+        <h3>General</h3>
+        <p>Test</p>
+        <h2>Formations</h2>
+        <p>Test</p>
+        <h3>General</h3>
+        <p>Test</p>
+        <h3>5-3-2</h3>
+        <p>Test</p>
+        <h3>3-5-2</h3>
+        <p>Test</p>
+        <h3>4-3-3</h3>
+        <p>Test</p>
+        <h3>4-5-1</h3>
+        <p>Test</p>
+        <h3>4-1-3-2</h3>
+        <p>Test</p>
+        <h3>4-4-2</h3>
+        <p>Test</p>
+        <h2>Club Management</h2>
+        <p>Test</p>
+        <h3>Analysts</h3>
+        <p>Test</p>
+        <h3>Interns</h3>
+        <p>Test</p>
+        <h2>Skills</h2>
+        <p>Test</p>
+        <h3>Touches</h3>
+        <p>Test</p>
+        <h3>Dribbling</h3>
+        <p>Test</p>
     </div>
 </div>
