--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Main Page
 ---
-<h1>The Soccer Coaching Odyssey</h1>
+<h1>Daniel On Soccer</h1>
 
 <p>This site serves the purpose of sharing my development as a soccer coach. It is my hope that, in sharing this, others will benefit, as well as, provide me with useful feedback. The topics of posts range from training sessions to tactical theory to physiological and psychological development of youth players. Alongside the posts, I am creating my own guidebook that covers every aspect of coaching that I have touched upor so far. It will continually be added to and revised, but will always be available for you to read and draw from.</p>
 
